put oepnapi spec link in the health url
