# api/src/opentrons/server/openapi.json
@@ -641,7 +641,7 @@
                   "type": "object",
                   "additionalProperties": false,
                   "required": [
-                    "name", "api_version", "fw_version", "logs", "system_version", "protocol_api_version"
+                    "name", "api_version", "fw_version", "logs", "system_version", "protocol_api_version", "links"
                   ],
                   "properties": {
                     "name": {"description": "The robot's name. In most cases the same as its mDNS advertisement domain name but this can get out of sync. Mostly useful for user-facing titles.",
@@ -655,7 +655,26 @@
                     "system_version": {"description": "The SemVer dotted-int version of the robot OS",
                                        "type": "string"},
                     "protocol_api_version": {"description": "The highest protocol API version supported by this OT-2",
-                                             "$ref": "#/components/schemas/protocolApiVersion"}
+                                             "$ref": "#/components/schemas/protocolApiVersion"},
+                    "links": {
+                      "type": "object",
+                      "description": "A set of useful links",
+                      "required": ["apiLog", "serialLog", "apiSpec"],
+                      "properties": {
+                        "apiLog": {
+                          "type": "string",
+                          "description": "The URI of the api logs"
+                        },
+                        "serialLog": {
+                          "type": "string",
+                          "description": "The URI of the serial logs"
+                        },
+                        "apiSpec": {
+                          "type": "string",
+                          "description": "The URI to this API specification"
+                        }
+                      }
+                    }
                   }
                 },
                 "example": {
@@ -664,7 +683,12 @@
                   "fw_version": "v2.15.0",
                   "logs": ["/logs/serial.log", "/logs/api.log"],
                   "system_version": "1.2.1",
-                  "protocol_api_version": [2, 0]
+                  "protocol_api_version": [2, 0],
+                  "links": {
+                    "apiLog": "/logs/api.log",
+                    "serialLog": "/logs/serial.log",
+                    "apiSpec": "/openapi.json"
+                  }
                 }
               }
             }
